--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ celery_project/secret.py
 celery_project/__pycache__/
 myapp/__pycache__/
 
+static/
 
 # Database files
 db.sqlite3
@@ -42,7 +43,6 @@ __pycache__/
 # Ignore media files
 media/
 staticfiles/
-
 
 # Django specific
 *.sqlite3  # SQLite database file, if you're using it locally
